# OpenGLCamera

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/inc/: BeautyShot_Image_Algorithm.h  BeautyShot_Video_Algorithm.h  abstypes.h  asvloffscreen.h
app/src/main/java/com/example/openglcamera/: BaseActivity.java  GLCameraActivity.java  HomeActivity.java
app/src/main/java/com/example/openglcamera/camera/: CameraHelper.java  CameraListener.java
app/src/main/java/com/example/openglcamera/util/: ImageUtil.java
app/src/main/java/com/example/openglcamera/widget/: RoundTextureView.java
app/src/main/java/com/example/openglcamera/widget/glsurface/: GLUtil.java  RoundCameraGLSurfaceView.java
app/src/main/res/layout/: activity_glsurface.xml  activity_home.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
